--- a/PokeList_WebApi/PokeList_WebApi.csproj
+++ b/PokeList_WebApi/PokeList_WebApi.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PokemonController.cs" />
+    <Compile Include="Controllers\PokemonTypeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
