--- a/PokeList_WebApi/PokeList_WebApi.csproj
+++ b/PokeList_WebApi/PokeList_WebApi.csproj
@@ -209,9 +209,9 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PokemonAttackController.cs" />
-    <Compile Include="Controllers\PokemonController.cs" />
+    <Compile Include="Controllers\PokemonEnController.cs" />
     <Compile Include="Controllers\PokemonFamilyController.cs" />
-    <Compile Include="Controllers\PokemonTypeController.cs" />
+    <Compile Include="Controllers\PokemonFrController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
