Changed color for title bar (desktop) and status bar (mobile)

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 /SwipeableSplitView_UWPClass/bin
 /SwipeableSplitView_UWPClass/obj
 /SwipeableSplitView_UWPClass
+/PokeList_Model/obj/x64/Debug
+/PokeList_Model/bin/x64/Debug
+/PokeList_UWP/obj/x64/Debug
+/PokeList_UWP/bin/x64/Debug
