--- a/PokeList_Model/PokeList_Model.csproj
+++ b/PokeList_Model/PokeList_Model.csproj
@@ -117,6 +117,7 @@
     <Compile Include="PreviousEvolution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecialAttack.cs" />
+    <Compile Include="Tools.cs" />
     <Compile Include="Weight.cs" />
     <EmbeddedResource Include="Properties\PokeList_Model.rd.xml" />
   </ItemGroup>
